[package]
name                      = "izihawa-common-multipart"
description               = "An implementation of multipart/form-data"
authors                   = ["Ferris Tseng <ferristseng@fastmail.fm>", "Pasha Podolsky <ppodolsky@me.com>"]
documentation             = "https://docs.rs/izihawa-multipart"
repository                = "https://github.com/izihawa/rs-multipart"
keywords                  = ["multipart", "form", "http"]
categories                = ["asynchronous", "web-programming"]
version                   = "1.0.0"
readme                    = "../README.md"
license                   = "MIT OR Apache-2.0"
edition                   = "2021"

[badges]
github                    = { repository = "izihawa/rs-multipart", workflow = "Rust" }
maintenance               = { status = "passively-maintained" }

[dependencies]
bytes                     = "1.1"
futures-core              = "0.3"
futures-util              = { version = "0.3", default-features = false, features = ["io"] }
http                      = "0.2"
mime                      = "0.3"
mime_guess                = "2.0"
rand                      = { version = "0.8", features = ["small_rng"] }
thiserror                 = "1.0"

[dev-dependencies]
futures-util              = { version = "0.3", default-features = false, features = ["std"] }
hyper                     = "0.14"
izihawa-hyper-multipart   = { path = "../hyper" }
tokio                     = { version = "1", features = ["macros", "rt"] }
