[package]
name                      = "izihawa-hyper-multipart"
description               = "An implementation of multipart/form-data for Hyper"
authors                   = ["Ferris Tseng <ferristseng@fastmail.fm>", "Pasha Podolsky <ppodolsky@me.com>"]
documentation             = "https://docs.rs/izihawa-hyper-multipart"
repository                = "https://github.com/izihawa/rs-multipart"
keywords                  = ["hyper", "multipart", "form", "http"]
categories                = ["asynchronous", "web-programming"]
version                   = "1.0.1"
readme                    = "../README.md"
license                   = "MIT OR Apache-2.0"
edition                   = "2021"

[badges]
github                    = { repository = "izihawa/rs-multipart", workflow = "Rust" }
maintenance               = { status = "passively-maintained" }

[dependencies]
bytes                     = "1.1"
izihawa-common-multipart  = { path = "../common", version = "1.0.1" }
futures-core              = "0.3"
http                      = "0.2"
hyper                     = { version = "0.14", features = ["stream"] }

[dev-dependencies]
futures-util              = { version = "0.3", default-features = false, features = ["std"] }
hyper                     = { version = "0.14", features = ["client", "http1", "http2", "server", "stream"] }
hyper-tls                 = "0.5"
tokio                     = { version = "1", features = ["macros", "rt-multi-thread"] }
